<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="MSG_ERR_CONTACT_NO_PHONE">Contact has no phone numbers!</string>
    <string name="TAG_ID_ReminderAdapter_Context">TAG_ID_ReminderAdapter_Context</string>
    <string name="TAG_ID_ReminderAdapter_Reminder">TAG_ID_ReminderAdapter_Reminder</string>
    <string name="TITLE_PICK_PHONE">Select a phone number</string>
    <string name="about_title">About</string>
    <string name="app_name">Forget Me Not</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_remember">Remember Someone</string>
    <string name="button_save">Save</string>
    <string name="cdesc_image_icon">Icon for this person</string>
    <string name="cr_label_datepicker_stop">Stop reminding me on this date:</string>
    <string name="cr_label_default_contact_type">Default contact method:</string>
    <string name="cr_repeat_period">Every</string>
    <string name="cr_rgcontact_call">Call</string>
    <string name="cr_rgcontact_sys_settings">Use system setting</string>
    <string name="cr_rgcontact_sms">Text</string>
    <string name="cr_title">Create a New Reminder</string>
    <string name="cr_when">Start reminding me on this date:</string>
    <string name="cr_who">Select a Contact</string>
    <string name="days">days</string>
    <string name="default_period">7</string>
    <string name="disprem_button_complete">Complete!</string>
    <string name="disprem_button_snooze">Snooze</string>
    <string name="disprem_text_activate_active">This reminder creates notifications</string>
    <string name="disprem_text_activate_inactive">This reminder does not create notifications.</string>
    <string name="empty"> </string>
    <string name="er_title">Edit Reminder</string>
    <string name="note">Note</string>
    <string name="str_default">Default</string>
    <string name="str_intro_usage">Forget Me Not is a simple app to help you remember to call friends, loved ones and other people every so many days.</string>
    <string name="str_todo">TODO</string>
    <string name="str_version">Version</string>
    <string name="vr_default_date_summary">Set a start and stop date</string>
    <string name="vr_default_name">No Name</string>
    <string name="vr_default_note">No note</string>
</resources>
