<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="25dp"
    android:orientation="vertical" >

	<ImageView
		android:id="@+id/li_logo"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:scaleType="fitStart"
		android:src="@drawable/logo" android:layout_centerHorizontal="true"
		android:contentDescription="@string/about_title"
		/>

	<TextView android:text="@string/app_name"
		android:id="@+id/li_product_title"
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_height="wrap_content"
		android:layout_below="@+id/li_logo"
		android:layout_marginTop="-25dp"
		android:textColor="#a0a0ff"
		android:textSize="25dip"
	 />

	<TextView android:text="@string/str_version"
		android:id="@+id/li_versionName"
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:layout_below="@+id/li_product_title"
	/>
	
	<TextView
	    android:id="@+id/li_str_intro_usage"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/li_versionName"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="25dp"
	    
	    android:gravity="center"
	    android:text="@string/str_intro_usage"
		android:textColor="#a0a0c0"
		android:textSize="20dip"
	    />

</RelativeLayout>
